Fixed nav bar opening issue of overlapping elements by using z-index

--- a/style.css
+++ b/style.css
@@ -113,6 +113,8 @@ li:hover {
 
     .wrapper {
         position: absolute;
+        display: flex;
+        justify-content: center;
         top: -300px;
         min-width: 100vw;
         min-height: 30vh;
@@ -130,15 +132,19 @@ li:hover {
 
     #refs-2 {
         display: flex;
-        margin: 0;
+        justify-content: space-evenly;
+        flex-direction: column;
+        align-items: center;
+        /* margin: 0;
         text-align: center;
         flex-direction: column;
         justify-content: space-between;
-        /* gap: 20px; */
-    }
+        gap: 20px;  */
+    } 
 
     li {
-        margin-top: 40px;
+        /* margin-top: 40px; */
+        /* color: white; */
     }
 
     #checkbox {
